--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 		<link rel="stylesheet" href="plugin/highlight/monokai.css" id="highlight-theme">
 
 		<style>
+			h1{
+				font-size: 2.77em !important;
+			}
 			/* Чтобы поля ввода были такого же размера, как и текст, увеличим размер шрифта дополнительно */
 			input, select {
 				font-size: 25px;
@@ -50,8 +53,11 @@
 				-->
 				<section class="center" data-markdown  data-separator-notes="^Note:">
 					<script type="text/template">
-						Математическая статистика
-						=====
+						Математическая 
+						==========
+						статистика
+						==========
+
 				
 						Note:
 						Заголовок
@@ -169,6 +175,7 @@
 					<script type="text/template">
 						### Размах
 						
+						Размах - разность между наибольшим и наименьшим значениями результатов наблюдений.
 
 						Note:
 
