--- a/index.html
+++ b/index.html
@@ -111,8 +111,10 @@
 					<script type="text/template">
 						### Выборочное среднее
 
-						Выборочное среднее — это приближение теоретического среднего распределения,
-						основанное на выборке из него.
+						Выборочное среднее или генеральная совокупность — совокупность объектов подлежащих изучению
+						по отношению к некоторому качественному или количественному признаку.
+
+						
 
 						Note:
 
